#####################
## pyproject.toml
## Top contributors (to current version):
##   Makai Mann
## This file is part of the CVC4 project.
## Copyright (c) 2009-2020 by the authors listed in the file AUTHORS
## in the top-level source directory and their institutional affiliations.
## All rights reserved.  See the file COPYING in the top-level source
## directory for licensing information.
##
## This file lists python dependencies for building a CVC4 Python wheel
## (the latest - as of now - packaging format for Python)
## This file can be safely ignored, it is for build infrastructure
## only (such as pip wheel)

[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "Cython", "toml", "ninja", "pytest"]