EXTRA_DIST = \
	README \
	cvc-devel.el \
	dimacs_to_smt.pl \
	switch-config \
	cvc-mode.el \
	editing-with-emacs \
	luby.c \
	addsourcedir \
	new-theory \
	configure-in-place \
	depgraph \
	get-antlr-3.4 \
	build-cudd-2.4.2-with-libtool.sh \
	build-cudd-2.5.0-with-libtool.sh \
	mac-build \
	win32-build \
	run-script-smtcomp2012 \
	theoryskel/kinds \
	theoryskel/Makefile \
	theoryskel/Makefile.am \
	theoryskel/README.WHATS-NEXT \
	theoryskel/theory_DIR.cpp \
	theoryskel/theory_DIR.h \
	theoryskel/theory_DIR_rewriter.h \
	theoryskel/theory_DIR_type_rules.h
