EXTRA_DIST = \
	README \
	cvc-devel.el \
	dimacs_to_smt.pl \
	switch-config \
	cvc-mode.el \
	editing-with-emacs \
	luby.c \
	addsourcedir \
	new-theory \
	configure-in-place \
	depgraph \
	get-abc \
	get-antlr-3.4 \
	get-cadical \
	get-cryptominisat \
	get-glpk-cut-log \
	get-lfsc-checker \
	get-script-header.sh \
	get-symfpu \
	get-win-dependencies \
	mac-build \
	run-script-smtcomp2014 \
	run-script-cascj7-fnt \
	run-script-cascj7-fof \
	run-script-cascj7-tff \
	theoryskel/kinds \
	theoryskel/README.WHATS-NEXT \
	theoryskel/theory_DIR.cpp \
	theoryskel/theory_DIR.h \
	theoryskel/theory_DIR_rewriter.h \
	theoryskel/theory_DIR_type_rules.h
	alttheoryskel/kinds \
	alttheoryskel/README.WHATS-NEXT \
	alttheoryskel/theory_DIR.cpp \
	alttheoryskel/theory_DIR.h
